manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: noto-emoji
  namespace: triangular
spec:
  selector:
    app: noto-emoji
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8811
---
